--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ verify_ssl = true
 [packages]
 django = "==3.2.5"
 graphene-django = "==2.15.0"
+psycopg2-binary = "==2.9.1"
 
 [requires]
 python_version = "3.9"
