--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,12 @@ verify_ssl = true
 django = "==3.2.5"
 graphene-django = "==2.15.0"
 psycopg2-binary = "==2.9.1"
+djangorestframework = "==3.12.4"
+markdown = "==3.3.4"
+django-filter = "==2.4.0"
+django-rest-auth = "==0.9.5"
+django-cors-headers = "==3.7.0"
+django-samesite-none = "==0.0.3"
 
 [requires]
 python_version = "3.9"
