--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ django-filter = "==2.4.0"
 django-rest-auth = "==0.9.5"
 django-cors-headers = "==3.7.0"
 django-samesite-none = "==0.0.3"
+dj-database-url = "==0.5.0"
 
 [requires]
 python_version = "3.9"
