--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - DEBUG=1
       - ENVIRONMENT=development
       - SECRET_KEY=Be8e94Q@A#P2qW6MAWSD8Ar@nc!qV
+      - SENDGRID_API_KEY=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
     ports:
       - 8000:8000
     volumes:
