--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -35,4 +35,4 @@ ENTRYPOINT ["sh", "entrypoint.sh"]
 EXPOSE 8000
 
 # Run command to start container
-CMD ["gunicorn", "tilt.wsgi", "-b", "0.0.0.0:8000"]
+CMD ["gunicorn", "backend.wsgi", "-b", "0.0.0.0:8000"]
