--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ django-cors-headers = "==3.7.0"
 django-samesite-none = "==0.0.3"
 dj-database-url = "==0.5.0"
 drfpasswordless = "==1.5.7"
+gunicorn = "==20.0.4"
 
 [requires]
 python_version = "3.9"
