--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -19,6 +19,11 @@ RUN pip install pipenv && pipenv install --system
 # Add the rest of the code
 COPY . $APP_HOME/
 
+# SECRET_KEY is only included here to avoid raising an error when generating static files.
+# Be sure to add a real SECRET_KEY config variable in deployment.
+RUN SECRET_KEY=somethingsupersecret \
+  python manage.py collectstatic --noinput
+
 # Chown all the files to the app user
 RUN chown -R app:app $APP_HOME
 
