--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ django-samesite-none = "==0.0.3"
 dj-database-url = "==0.5.0"
 drfpasswordless = "==1.5.7"
 gunicorn = "==20.0.4"
+whitenoise = "==5.3.0"
 
 [requires]
 python_version = "3.9"
